suqestion flase class added and can not asnwer checkbox padding issue fixed for rtl view minor scss cchanges for continuous layout left aligned stars

--- a/source/sass/partials/feedback-fixed/_fixed-feedback-continuous.scss
+++ b/source/sass/partials/feedback-fixed/_fixed-feedback-continuous.scss
@@ -264,20 +264,31 @@
 //Continuous layout left alignment
 .feedback__continuous__align-left {
   .feedback__continuous__emo-list {
-    & &__table-row {
+    .feedback__continuous__emo-list__table-row {
       display: block;
       &.total-row {
         @media (min-width: 768px) {
           .feedback__continuous__emo-list__item {
             border-top: 0 none;
           }
-          .feedback__continuous__emo-list__description {
+          & {
             border-top: 1px solid $default-border-color;
           }
         }
       }
     }
-    & &__description {
+    &.subquestion__false {
+      .feedback__continuous__emo-list__table-row {
+        &.total-row {
+          @media (min-width: 768px) {
+            &, .feedback__continuous__emo-list__description {
+              border-top: 0 none;
+            }
+          }
+        }
+      }
+    }
+    .feedback__continuous__emo-list__description {
       display: block;
       width: 100%;
       text-align: initial;
